# sorting-suite

./: LICENSE  README.md  setup.cfg
sorting_suite/: __init__.py  sorting.py  testing.py
sorting_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
