[metadata]
name = sorting_suite
version = 0.1.0
author = Reese Fairchild
author_email = rfair@uw.edu
description = A large suite of numerical sorting algorithms in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://reesefairchild.github.io/sorting_suite
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.8
install_requires =
    random

[options.packages.find]
where = .